JDK1.4.2 compatible problem solved. version changed (1.0.0-rc-3->1.0.0-SNAPSHOT)
git-svn-id: https://www.seasar.org/svn/sandbox/s2flex2/trunk@1075 c2bc002a-290a-0410-b2b5-f81595976b5c